# backup-service

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  deny.toml  docker-compose.yml  rust-toolchain.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  initiate-release.yml  nm-ci-build-push.yaml  nm-ci-reusable-workflow-build-push.yaml  nm-ci-trigger-build-dev.yaml  release.yml  relyance-sci.yml  security-scorecard-deploy.yml
src/: attestation_gateway.rs  auth.rs  axum_utils.rs  backup_storage.rs  challenge_manager.rs  dynamo_cache.rs  factor_lookup.rs  headers.rs  kms_jwe.rs  lib.rs  main.rs  middleware.rs  mock_oidc_server.rs  oidc_nonce_verifier.rs  oidc_token_verifier.rs  redis_cache.rs  routes.rs  server.rs  sync_factor_token.rs  turnkey_activity.rs  utils.rs  verify_signature.rs  webauthn.rs
src/routes/: add_factor.rs  add_factor_challenge.rs  add_factor_challenge_existing_passkey.rs  add_factor_challenge_new_keypair.rs  add_oidc_account.rs  add_sync_factor.rs  add_sync_factor_challenge_keypair.rs  backup_status.rs  create_backup.rs  create_challenge_keypair.rs  create_challenge_passkey.rs  delete_backup.rs  delete_backup_challenge_keypair.rs  delete_factor.rs  delete_factor_challenge_keypair.rs  docs.rs  health.rs  keypair_challenge.rs  ready.rs  reset.rs  reset_challenge_keypair.rs  retrieve_challenge_keypair.rs  retrieve_challenge_passkey.rs  retrieve_from_challenge.rs  retrieve_metadata.rs  retrieve_metadata_challenge_keypair.rs  sync_backup.rs  sync_challenge_keypair.rs  verify_factor.rs  verify_factor_challenge_keypair.rs  verify_factor_challenge_passkey.rs
src/types/: authorization.rs  backup_metadata.rs  encryption_key.rs  environment.rs  error.rs  mod.rs  oidc_token.rs  solved_challenge.rs
src/utils/: webauthn.rs
test-utils/: Cargo.toml  README.md
test-utils/src/: lib.rs  mock_oidc_server.rs  passkey_client.rs
tests/: add_factor_auth_validation.rs  add_factor_challenge_binding.rs  add_factor_challenge_shapes.rs  add_factor_happy_paths.rs  add_factor_integration.rs  add_factor_negative_existing_kind_mismatch.rs  add_factor_turnkey_validation.rs  add_oidc_account_integration.rs  add_sync_factor_integration.rs  aws-seed.sh  backup_status_integration.rs  create_backup_integration.rs  create_challenge_integration.rs  create_challenge_intergration.rs  delete_backup_integration.rs  delete_factor_integration.rs  reset_backup_integration.rs  retrieve_backup_integration.rs  retrieve_backup_keypair_integration.rs  retrieve_backup_oidc_integration.rs  retrieve_backup_passkey_integration.rs  retrieve_challenge_integration.rs  retrieve_metadata_integration.rs  sync_backup_integration.rs  test_ready_checks.rs  verify_factor_integration.rs
tests/common/: mod.rs  oidc_server.rs  passkey_client.rs
tests/e2e/: create-and-retrieve-backup.py
