[package]
name    = "backup-service"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
aide = { version = "0.14.2", features = [
    "redoc",
    "swagger",
    "scalar",
    "axum-json",
    "axum-multipart",
    "macros",
] }
axum = { version = "0.8.1", features = ["macros", "multipart"] }
tower-http = { version = "0.6.2", features = [
    "compression-br",
    "limit",
    "trace",
    "timeout",
] }
schemars = "0.8.21"

aws-config       = "1.6.0"
aws-sdk-kms      = "1.63.0"
aws-sdk-s3       = "1.79.0"
aws-sdk-dynamodb = "1.71.2"

anyhow = "1.0.97"
base64 = "0.22.1"
dotenvy = "0.15.7"
futures = "0.3.31"
josekit = "0.10.1"
hex = "0.4.3"
rand = "0.8.0"
reqwest = { version = "0.12.20", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
    "fmt",
    "json",
] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
http = "1.3.1"
# TODO/FIXME: Investigate how dangerous this is considering we're going to be tracking used challenges
webauthn-rs = { version = "0.5.1", features = [
    "danger-allow-state-serialisation",
    "conditional-ui",
    "workaround-google-passkey-specific-issues",
] }
openidconnect = "4.0.0"
chrono = { version = "0.4.40", features = ["serde"] }
p256 = { version = "0.13.2", features = ["ecdsa"] }
sha2 = "0.10.8"

# for mock oidc server (used in integration and unit tests)
mockito = "1.7.0"
rsa     = "0.9.8"

[dev-dependencies]
http-body-util = "0.1.3"
tower          = "0.5.2"
passkey        = { version = "0.4.0" }
url            = "2.5.4"
public-suffix  = "0.1.2"
async-trait    = "0.1.88"
rsa            = "0.9.8"
rand           = "0.8.0"
chrono         = "0.4.40"
mockito        = "1.7.0"
