
[workspace]
members = [".", "test-utils"]

[workspace.package]
version = "0.7.9"

[workspace.dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
hex = "0.4.3"
openidconnect = "4.0.0"
rand = "0.8.0"
serde_json = "1.0.143"
sha2 = "0.10.8"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
p256 = { version = "0.13.2", features = ["ecdsa"] }

# dev workspace dependencies
mockito = "1.7.0"


[package]
name = "backup-service"
version.workspace = true
edition = "2021"
license = "MIT"
publish = false


[dependencies]
aide = { version = "0.14.2", features = [
  "redoc",
  "swagger",
  "scalar",
  "axum-json",
  "axum-multipart",
  "macros",
] }

anyhow = "1.0.98"
aws-config = "1.6.1"
aws-sdk-dynamodb = "1.71.2"
aws-sdk-kms = "1.63.0"
aws-sdk-s3 = "1.82.0"
axum = { version = "0.8.1", features = ["macros", "multipart"] }
base64 = { workspace = true }
chrono = { workspace = true }
dotenvy = "0.15.7"
futures = "0.3.31"
hex = { workspace = true }
http = "1.3.1"
josekit = { version = "0.10.1", features = ["vendored"] }
openidconnect = { workspace = true }
p256 = { workspace = true }
rand = { workspace = true }
redis = { version = "0.32.5", features = ["connection-manager", "tokio-comp"] }
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"] }
schemars = "0.8.21"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
strum = "0.27.2"
strum_macros = "0.27.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.6.2", features = [
  "compression-br",
  "limit",
  "trace",
  "timeout",
] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.20", default-features = false, features = [
  "fmt",
  "json",
  "env-filter",
] }
uuid = { workspace = true }
# TODO/FIXME: Investigate how dangerous this is considering we're going to be tracking used challenges
webauthn-rs = { version = "0.5.2", features = [
  "danger-allow-state-serialisation",
  "conditional-ui",
  "workaround-google-passkey-specific-issues",
] }


[dev-dependencies]
backup-service-test-utils = { path = "test-utils/" }
chrono = "0.4.40"
http-body-util = "0.1.3"
mockito = { workspace = true }
tower = "0.5.2"
serial_test = "3.2.0"


[profile.release]
strip = true
