[package]
name = "backup-service-test-utils"
publish = false
edition = "2024"
license = "MIT"
version.workspace = true

[dependencies]
async-trait = "0.1.89"
base64 = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
mockito = { workspace = true }
openidconnect = { workspace = true }
passkey = "0.4.0"
public-suffix = "0.1.3"
rand = { workspace = true }
rsa = "0.9.8"
serde_json = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
url = "2.5.4"
p256 = { workspace = true }
